feat(design/template): make changes to UI
-add a navbar to sign-up, sign-in and reset password pages

[delivers #163384443]

--- a/UI/index.html
+++ b/UI/index.html
@@ -15,7 +15,7 @@
             <nav>
                 <ul>
                     <li id="logo">
-                        Politico
+                        <a href="#">Politico</a>
                     </li>
                     <li class="nav-item first-nav-item">
                         <button>login</button>
