--- a/UI/reset-password.html
+++ b/UI/reset-password.html
@@ -9,11 +9,21 @@
     <link rel="stylesheet" href="styles/sign-in.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li class="logo">
+                <a href="#" class="logo">Politico</a>
+            </li>
+            <li class="nav-item first-nav-item">
+                <button>sign-in</button>
+            </li>
+        </ul>
+    </nav>
     <section class="main">
-       <a href=""><h1>Politico</h1></a>
+       <h1>Reset Your Password</h1>
        <div class="box">
         <div class="form">
-            <h2>Reset Your Password</h2>
+            <h2></h2>
             <form id="sign-in-form">
                 <label for="current-pwd">Current Password</label>
                 <input type="password" id="current-pwd" class="input"><br>
