--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -9,11 +9,21 @@
     <link rel="stylesheet" href="styles/sign-in.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li class="logo">
+                <a href="#" class="logo">Politico</a>
+            </li>
+            <li class="nav-item first-nav-item">
+                <button>sign-up</button>
+            </li>
+        </ul>
+    </nav>
     <section class="main">
-       <a href=""><h1>Politico</h1></a>
+       <h1>Sign in</h1>
        <div class="box">
         <div class="form">
-            <h2>Sign in</h2>
+            <h2></h2>
             <form id="sign-in-form">
                 <label for="sign-in-email">Email</label>
                 <input type="email" id="sign-in-email" class="input"><br>
