--- a/UI/reset-password.html
+++ b/UI/reset-password.html
@@ -15,7 +15,7 @@
                 <a href="#" class="logo">Politico</a>
             </li>
             <li class="nav-item first-nav-item">
-                <button>sign-in</button>
+                <button>sign-out</button>
             </li>
         </ul>
     </nav>
