feat(design/template): change text in sign-up page submit button
-change the text from sign-in to sign-up

[delivers #163419537]

--- a/UI/sign-up.html
+++ b/UI/sign-up.html
@@ -37,7 +37,7 @@
                 <input type="text" id="sign-in-phone" class="input"><br>
                 <label for="sign-in-pass">Password</label>
                 <input type="password" id="sign-in-pass" class="input"><br>
-                <input type="submit" class="submit-button input" value="Sign in">
+                <input type="submit" class="submit-button input" value="Sign up">
             </form>
             <h6 id="alt-sign-up">Already have an account? <a href="">Sign in</a></h6> 
         </div>
