--- a/UI/parties.html
+++ b/UI/parties.html
@@ -15,11 +15,11 @@
                 <a href="#" class="logo">Politico</a>
             </li>
             <li class="nav-item first-nav-item">
-                <button>login</button>
+                <button>logout</button>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <button>sign-up</button>
-            </li>
+            </li> -->
         </ul>
     </nav>
 
