feat(design/template): add different government offices to
[delivers #163454768]

--- a/UI/offices.html
+++ b/UI/offices.html
@@ -54,7 +54,7 @@
         </div>
         <div class="one-office">
             <div class="text">
-                <p>President Federal Republic Of Nigeria</p>
+                <p>Executive Governor Of Lagos state</p>
                 <button class="show-candidates">See all candidates</button>
             </div>
             <div class="candidates">
@@ -70,7 +70,7 @@
         </div>
         <div class="one-office">
             <div class="text">
-                <p>President Federal Republic Of Nigeria</p>
+                <p>Senate President Federal Republic Of Nigeria</p>
                 <button class="show-candidates">See all candidates</button>
             </div>
             <div class="candidates">
@@ -86,7 +86,7 @@
         </div>
         <div class="one-office">
             <div class="text">
-                <p>President Federal Republic Of Nigeria</p>
+                <p>Senator Lagos Central Constituency</p>
                 <button class="show-candidates">See all candidates</button>
             </div>
             <div class="candidates">
@@ -102,7 +102,7 @@
         </div>
         <div class="one-office">
             <div class="text">
-                <p>President Federal Republic Of Nigeria</p>
+                <p>Senator Lagos West Constituency</p>
                 <button class="show-candidates">See all candidates</button>
             </div>
             <div class="candidates">
@@ -118,7 +118,7 @@
         </div>
         <div class="one-office">
             <div class="text">
-                <p>President Federal Republic Of Nigeria</p>
+                <p>House Of Representatives Lagos Central</p>
                 <button class="show-candidates">See all candidates</button>
             </div>
             <div class="candidates">
@@ -134,7 +134,7 @@
         </div>
         <div class="one-office">
             <div class="text">
-                <p>President Federal Republic Of Nigeria</p>
+                <p>House Of Representatives Lagos West</p>
                 <button class="show-candidates">See all candidates</button>
             </div>
             <div class="candidates">
