feat(design/template): make create party page responsive
[delivers #163457692]

--- a/UI/create-party.html
+++ b/UI/create-party.html
@@ -56,6 +56,6 @@
     <footer>
         &copy; Politico 2019
     </footer>
-    <script src="js/offices.js"></script>
+    <script src="js/create.js"></script>
 </body>
 </html>
