feat(design/template): Link pages together
-navigate from one page to the other

[delivers #163473551]

--- a/UI/admin-offices.html
+++ b/UI/admin-offices.html
@@ -20,12 +20,12 @@
         </ul>
     </nav>
     <section id="side-bar">
-        <a href="https://jesse-efe.github.io/Politico/UI/parties.html">
+        <a href="https://jesse-efe.github.io/Politico/UI/admin-parties.html">
             <div class="menu-item">
                 Political parties
             </div>
         </a>
-        <a href="https://jesse-efe.github.io/Politico/UI/offices.html">
+        <a href="https://jesse-efe.github.io/Politico/UI/admin-offices.html">
             <div class="menu-item active">
                 Political offices
             </div>
@@ -33,6 +33,16 @@
         <a href="https://jesse-efe.github.io/Politico/UI/results.html">
             <div class="menu-item">
                 Election results
+            </div>
+        </a>
+        <a href="https://jesse-efe.github.io/Politico/UI/create-party.html">
+            <div class="menu-item">
+                Create Party
+            </div>
+        </a>
+        <a href="https://jesse-efe.github.io/Politico/UI/create-office.html">
+            <div class="menu-item">
+                Create Ofice
             </div>
         </a>
         <a href="https://jesse-efe.github.io/Politico/UI/reset-password.html">
