--- a/UI/admin-parties.html
+++ b/UI/admin-parties.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li class="logo">
-                <a href="#" class="logo">Politico</a>
+                <a href="https://jesse-efe.github.io/Politico/UI/" class="logo">Politico</a>
             </li>
             <li class="nav-item first-nav-item">
                 <button>logout</button>
@@ -28,7 +28,7 @@
             </div>
             <div id="one-party-text">
                 <h3>Green Party of Nigeria</h3>
-                <button class="good-button edit-party">Edit Party</button>
+                <button class="good-button edit-party"><a href="https://jesse-efe.github.io/Politico/UI/edit-party.html">Edit Party</a></button>
                 <button class="good-button">Delete Party</button>
             </div>
         </div>
@@ -39,7 +39,7 @@
             </div>
             <div id="one-party-text">
                 <h3>Young Democratic party</h3>
-                <button class="good-button edit-party">Edit Party</button>
+                <button class="good-button edit-party"><a href="https://jesse-efe.github.io/Politico/UI/edit-party.html">Edit Party</a></button>
                 <button class="good-button">Delete Party</button>
             </div>
         </div>
@@ -50,7 +50,7 @@
             </div>
             <div id="one-party-text">
                 <h3>All Progressives Grand Alliance</h3>
-                <button class="good-button edit-party">Edit Party</button>
+                <button class="good-button edit-party"><a href="https://jesse-efe.github.io/Politico/UI/edit-party.html">Edit Party</a></button>
                 <button class="good-button">Delete Party</button>
             </div>
         </div>
@@ -61,7 +61,7 @@
             </div>
             <div id="one-party-text">
                 <h3>Accord</h3>
-                <button class="good-button edit-party">Edit Party</button>
+                <button class="good-button edit-party"><a href="https://jesse-efe.github.io/Politico/UI/edit-party.html">Edit Party</a></button>
                 <button class="good-button">Delete Party</button>
             </div>
         </div>
@@ -72,7 +72,7 @@
             </div>
             <div id="one-party-text">
                 <h3>Peoples Democratic Party</h3>
-                <button class="good-button edit-party">Edit Party</button>
+                <button class="good-button edit-party"><a href="https://jesse-efe.github.io/Politico/UI/edit-party.html">Edit Party</a></button>
                 <button class="good-button">Delete Party</button>
             </div>
         </div>
@@ -83,7 +83,7 @@
             </div>
             <div id="one-party-text">
                 <h3>All Progressives Congress</h3>
-                <button class="good-button edit-party">Edit Party</button>
+                <button class="good-button edit-party"><a href="https://jesse-efe.github.io/Politico/UI/edit-party.html">Edit Party</a></button>
                 <button class="good-button">Delete Party</button>
             </div>
         </div>
@@ -94,7 +94,7 @@
             </div>
             <div id="one-party-text">
                 <h3>Allied Congress Party of Nigeria</h3>
-                <button class="good-button edit-party">Edit Party</button>
+                <button class="good-button edit-party"><a href="https://jesse-efe.github.io/Politico/UI/edit-party.html">Edit Party</a></button>
                 <button class="good-button">Delete Party</button>
             </div>
         </div>
@@ -105,7 +105,7 @@
             </div>
             <div id="one-party-text">
                 <h3>KOWA</h3>
-                <button class="good-button edit-party">Edit Party</button>
+                <button class="good-button edit-party"><a href="https://jesse-efe.github.io/Politico/UI/edit-party.html">Edit Party</a></button>
                 <button class="good-button">Delete Party</button>
             </div>
         </div>
