--- a/UI/create-party.html
+++ b/UI/create-party.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li class="logo">
-                <a href="#" class="logo">Politico</a>
+                <a href="https://jesse-efe.github.io/Politico/UI/" class="logo">Politico</a>
             </li>
             <li class="nav-item first-nav-item">
                 <button>sign-out</button>
@@ -20,21 +20,40 @@
         </ul>
     </nav>
     <section id="side-bar">
-        <div class="menu-item">
-            <a href="">Political parties</a>
-        </div>
-        <div class="menu-item">
-            <a href="">Political offices</a>
-        </div>
-        <div class="menu-item">
-            <a href="">Election results</a>
-        </div>
-        <div class="menu-item">
-            <a href="">Reset password</a>
-        </div>
+            <a href="https://jesse-efe.github.io/Politico/UI/admin-parties.html">
+                <div class="menu-item">
+                    Political parties
+                </div>
+            </a>
+            <a href="https://jesse-efe.github.io/Politico/UI/admin-offices.html">
+                <div class="menu-item">
+                    Political offices
+                </div>
+            </a>
+            <a href="https://jesse-efe.github.io/Politico/UI/results.html">
+                <div class="menu-item">
+                    Election results
+                </div>
+            </a>
+            <a href="https://jesse-efe.github.io/Politico/UI/create-party.html">
+                <div class="menu-item active">
+                    Create Party
+                </div>
+            </a>
+            <a href="https://jesse-efe.github.io/Politico/UI/create-office.html">
+                <div class="menu-item">
+                    Create Ofice
+                </div>
+            </a>
+            <a href="https://jesse-efe.github.io/Politico/UI/reset-password.html">
+                <div class="menu-item">
+                    Reset password
+                </div>
+            </a>
     </section>
     <section id="form-area">
         <i class="fas fa-bars fa-2x"></i>
+        <i class="fas fa-times fa-2x"></i>
         <h1>Create A Political Party</h1>
         <section class="main">
             <div class="box">
