--- a/UI/index.html
+++ b/UI/index.html
@@ -15,7 +15,7 @@
             <nav>
                 <ul>
                     <li id="logo">
-                        <a href="#">Politico</a>
+                        <a href="https://jesse-efe.github.io/Politico/UI/">Politico</a>
                     </li>
                     <li class="nav-item first-nav-item">
                         <button>login</button>
@@ -62,7 +62,7 @@
             <div class="description-text">
                 <h1>Its About Convenience</h1> 
                 <h4>Join a political party, run for a political office, vote securely. All from the confort of your home</h4>
-                <button>Get Started</button>
+                <button><a href="https://jesse-efe.github.io/Politico/UI/edit-party.html">Get Started</a></button>
             </div>
         </section>
     </div>
