--- a/UI/parties.html
+++ b/UI/parties.html
@@ -12,14 +12,11 @@
     <nav>
         <ul>
             <li class="logo">
-                <a href="#" class="logo">Politico</a>
+                <a href="https://jesse-efe.github.io/Politico/UI/" class="logo">Politico</a>
             </li>
             <li class="nav-item first-nav-item">
                 <button>logout</button>
             </li>
-            <!-- <li class="nav-item">
-                <button>sign-up</button>
-            </li> -->
         </ul>
     </nav>
 
