--- a/UI/politician-offices.html
+++ b/UI/politician-offices.html
@@ -20,21 +20,30 @@
         </ul>
     </nav>
     <section id="side-bar">
-        <div class="menu-item">
-            <a href="">Political parties</a>
-        </div>
-        <div class="menu-item">
-            <a href="">Political offices</a>
-        </div>
-        <div class="menu-item">
-            <a href="">Election results</a>
-        </div>
-        <div class="menu-item">
-            <a href="">Reset password</a>
-        </div>
+        <a href="https://jesse-efe.github.io/Politico/UI/parties.html">
+            <div class="menu-item">
+                Political parties
+            </div>
+        </a>
+        <a href="https://jesse-efe.github.io/Politico/UI/politician-offices.html">
+            <div class="menu-item active">
+                Political offices
+            </div>
+        </a>
+        <a href="https://jesse-efe.github.io/Politico/UI/results.html">
+            <div class="menu-item">
+                Election results
+            </div>
+        </a>
+        <a href="https://jesse-efe.github.io/Politico/UI/reset-password.html">
+            <div class="menu-item">
+                Reset password
+            </div>
+        </a>
     </section>
     <section id="offices">
         <i class="fas fa-bars fa-2x"></i>
+        <i class="fas fa-times fa-2x"></i>
         <h1>Government offices</h1>
         <div class="one-office">
             <div class="text">
