--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li class="logo">
-                <a href="#" class="logo">Politico</a>
+                <a href="https://jesse-efe.github.io/Politico/UI/" class="logo">Politico</a>
             </li>
             <li class="nav-item first-nav-item">
                 <button>sign-up</button>
