--- a/UI/user-profile.html
+++ b/UI/user-profile.html
@@ -13,7 +13,7 @@
     <nav>
         <ul>
             <li class="logo">
-                <a href="#" class="logo">Politico</a>
+                <a href="https://jesse-efe.github.io/Politico/UI/" class="logo">Politico</a>
             </li>
             <li class="nav-item first-nav-item">
                 <button>sign-out</button>
@@ -21,21 +21,30 @@
         </ul>
     </nav>
     <section id="side-bar">
-        <div class="menu-item">
-            <a href="">Political parties</a>
-        </div>
-        <div class="menu-item">
-            <a href="">Political offices</a>
-        </div>
-        <div class="menu-item">
-            <a href="">Election results</a>
-        </div>
-        <div class="menu-item">
-            <a href="">Reset password</a>
-        </div>
+        <a href="https://jesse-efe.github.io/Politico/UI/parties.html">
+            <div class="menu-item">
+                Political parties
+            </div>
+        </a>
+        <a href="https://jesse-efe.github.io/Politico/UI/offices.html">
+            <div class="menu-item">
+                Political offices
+            </div>
+        </a>
+        <a href="https://jesse-efe.github.io/Politico/UI/results.html">
+            <div class="menu-item">
+                Election results
+            </div>
+        </a>
+        <a href="https://jesse-efe.github.io/Politico/UI/reset-password.html">
+            <div class="menu-item">
+                Reset password
+            </div>
+        </a>
     </section>
     <section id="user-details">
         <i class="fas fa-bars fa-2x"></i>
+        <i class="fas fa-times fa-2x"></i>
         <h1>Your Vote History</h1>
         <div id="history">
             <div class="one-history">
