feat(design/template): indicate the winner of an election
[delivers #163482742]

--- a/UI/results.html
+++ b/UI/results.html
@@ -55,7 +55,7 @@
                     <p>Bolanle Afenikoro Elizabeth  [YDP]</p> <span>112 Votes</span>
                     <p>Afe Babalola [PDP] </p> <span>109 Votes</span>
                     <p>Okoro Philip Odianfo [ACCORD] </p> <span>15 Votes</span>
-                    <p>Victoria Akpan John  [APC] </p> <span>302 Votes</span>
+                    <div class="winner"><p>Victoria Akpan John  [APC] </p> <span>302 Votes</span></div>
                     <p>Peter Festus Jnr.  [APGA] </p> <span>47 Votes</span>
                 </form>
             </div>
@@ -70,7 +70,7 @@
                     <p>Bolanle Afenikoro Elizabeth  [YDP]</p> <span>112 Votes</span>
                     <p>Afe Babalola [PDP] </p> <span>109 Votes</span>
                     <p>Okoro Philip Odianfo [ACCORD] </p> <span>15 Votes</span>
-                    <p>Victoria Akpan John  [APC] </p> <span>302 Votes</span>
+                    <div class="winner"><p>Victoria Akpan John  [APC] </p> <span>302 Votes</span></div>
                     <p>Peter Festus Jnr.  [APGA] </p> <span>47 Votes</span>
                 </form>
             </div>
@@ -85,7 +85,7 @@
                     <p>Bolanle Afenikoro Elizabeth  [YDP]</p> <span>112 Votes</span>
                     <p>Afe Babalola [PDP] </p> <span>109 Votes</span>
                     <p>Okoro Philip Odianfo [ACCORD] </p> <span>15 Votes</span>
-                    <p>Victoria Akpan John  [APC] </p> <span>302 Votes</span>
+                    <div class="winner"><p>Victoria Akpan John  [APC] </p> <span>302 Votes</span></div>
                     <p>Peter Festus Jnr.  [APGA] </p> <span>47 Votes</span>
                 </form>
             </div>
@@ -100,7 +100,7 @@
                     <p>Bolanle Afenikoro Elizabeth  [YDP]</p> <span>112 Votes</span>
                     <p>Afe Babalola [PDP] </p> <span>109 Votes</span>
                     <p>Okoro Philip Odianfo [ACCORD] </p> <span>15 Votes</span>
-                    <p>Victoria Akpan John  [APC] </p> <span>302 Votes</span>
+                    <div class="winner"><p>Victoria Akpan John  [APC] </p> <span>302 Votes</span></div>
                     <p>Peter Festus Jnr.  [APGA] </p> <span>47 Votes</span>
                 </form>
             </div>
@@ -115,7 +115,7 @@
                     <p>Bolanle Afenikoro Elizabeth  [YDP]</p> <span>112 Votes</span>
                     <p>Afe Babalola [PDP] </p> <span>109 Votes</span>
                     <p>Okoro Philip Odianfo [ACCORD] </p> <span>15 Votes</span>
-                    <p>Victoria Akpan John  [APC] </p> <span>302 Votes</span>
+                    <div class="winner"><p>Victoria Akpan John  [APC] </p> <span>302 Votes</span></div>
                     <p>Peter Festus Jnr.  [APGA] </p> <span>47 Votes</span>
                 </form>
             </div>
@@ -130,7 +130,7 @@
                      <p>Bolanle Afenikoro Elizabeth  [YDP]</p> <span>112 Votes</span>
                      <p>Afe Babalola [PDP] </p> <span>109 Votes</span>
                      <p>Okoro Philip Odianfo [ACCORD] </p> <span>15 Votes</span>
-                     <p>Victoria Akpan John  [APC] </p> <span>302 Votes</span>
+                     <div class="winner"><p>Victoria Akpan John  [APC] </p> <span>302 Votes</span></div>
                      <p>Peter Festus Jnr.  [APGA] </p> <span>47 Votes</span>     
                 </form>
             </div>
@@ -145,7 +145,7 @@
                     <p>Bolanle Afenikoro Elizabeth  [YDP]</p> <span>112 Votes</span>
                     <p>Afe Babalola [PDP] </p> <span>109 Votes</span>
                     <p>Okoro Philip Odianfo [ACCORD] </p> <span>15 Votes</span>
-                    <p>Victoria Akpan John  [APC] </p> <span>302 Votes</span>
+                    <div class="winner"><p>Victoria Akpan John  [APC] </p> <span>302 Votes</span></div>
                     <p>Peter Festus Jnr.  [APGA] </p> <span>47 Votes</span>
                 </form>
             </div>
