--- a/UI/admin-parties.html
+++ b/UI/admin-parties.html
@@ -55,7 +55,7 @@
     <section id="user-details">
         <i class="fas fa-bars fa-2x"></i>
         <i class="fas fa-times fa-2x"></i>
-        <h1>Your Vote History</h1>
+        <h1>Political Parties</h1>
         <div id="history">
             <div id="one-party">
                 <div id="one-party-pic">
