feat(design/template): update  links in UI pages
-update links of buttons in homepage
-link up sign-out buttons to home page

[delivers #163501198]

--- a/UI/admin-offices.html
+++ b/UI/admin-offices.html
@@ -15,7 +15,7 @@
                 <a href="https://jesse-efe.github.io/Politico/UI/" class="logo">Politico</a>
             </li>
             <li class="nav-item first-nav-item">
-                <button>sign-out</button>
+                <button><a href="https://jesse-efe.github.io/Politico/UI/">sign-out</a></button>
             </li>
         </ul>
     </nav>
