--- a/UI/index.html
+++ b/UI/index.html
@@ -18,10 +18,10 @@
                         <a href="https://jesse-efe.github.io/Politico/UI/">Politico</a>
                     </li>
                     <li class="nav-item first-nav-item">
-                        <button>login</button>
+                        <button><a href="https://jesse-efe.github.io/Politico/UI/sign-in.html">login</a></button>
                     </li>
                     <li class="nav-item">
-                        <button>sign-up</button>
+                        <button><a href="https://jesse-efe.github.io/Politico/UI/sign-up.html">sign-up</a></button>
                     </li>
                 </ul>
             </nav>
@@ -62,7 +62,7 @@
             <div class="description-text">
                 <h1>Its About Convenience</h1> 
                 <h4>Join a political party, run for a political office, vote securely. All from the confort of your home</h4>
-                <button><a href="https://jesse-efe.github.io/Politico/UI/edit-party.html">Get Started</a></button>
+                <button><a href="https://jesse-efe.github.io/Politico/UI/sign-up.html">Get Started</a></button>
             </div>
         </section>
     </div>
