--- a/UI/new-parties.html
+++ b/UI/new-parties.html
@@ -16,7 +16,7 @@
                 <a href="https://jesse-efe.github.io/Politico/UI/" class="logo">Politico</a>
             </li>
             <li class="nav-item first-nav-item">
-                <button><a href="https://jesse-efe.github.io/Politico/UI/">sign-out</a></button>
+                <button>sign-out</button>
             </li>
         </ul>
     </nav>
@@ -55,7 +55,7 @@
     <section id="user-details">
         <i class="fas fa-bars fa-2x"></i>
         <i class="fas fa-times fa-2x"></i>
-        <h1>Political Parties</h1>
+        <h1>Your Vote History</h1>
         <div id="history">
             <div id="one-party">
                 <div id="one-party-pic">
