--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -15,7 +15,7 @@
                 <a href="https://jesse-efe.github.io/Politico/UI/" class="logo">Politico</a>
             </li>
             <li class="nav-item first-nav-item">
-                <button>sign-up</button>
+                <button><a href="https://jesse-efe.github.io/Politico/UI/sign-up.html">sign-up</a></button>
             </li>
         </ul>
     </nav>
