--- a/UI/create-office.html
+++ b/UI/create-office.html
@@ -15,7 +15,7 @@
                 <a href="https://jesse-efe.github.io/Politico/UI/" class="logo">Politico</a>
             </li>
             <li class="nav-item first-nav-item">
-                <button>sign-out</button>
+                <button><a href="https://jesse-efe.github.io/Politico/UI/">sign-out</a></button>
             </li>
         </ul>
     </nav>
