--- a/UI/politician-profile.html
+++ b/UI/politician-profile.html
@@ -6,45 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/profile.css">
 </head>
 <body>
     <nav>
         <ul>
             <li class="logo">
-                <a href="https://jesse-efe.github.io/Politico/UI/" class="logo">Politico</a>
+                <a href="#" class="logo">Politico</a>
             </li>
             <li class="nav-item first-nav-item">
-                <button><a href="https://jesse-efe.github.io/Politico/UI/">sign-out</a></button>
+                <button>sign-out</button>
             </li>
         </ul>
     </nav>
     <section id="side-bar">
-        <a href="https://jesse-efe.github.io/Politico/UI/parties.html">
-            <div class="menu-item">
-                Political parties
-            </div>
-        </a>
-        <a href="https://jesse-efe.github.io/Politico/UI/offices.html">
-            <div class="menu-item">
-                Political offices
-            </div>
-        </a>
-        <a href="https://jesse-efe.github.io/Politico/UI/results.html">
-            <div class="menu-item">
-                Election results
-            </div>
-        </a>
-        <a href="https://jesse-efe.github.io/Politico/UI/reset-password.html">
-            <div class="menu-item">
-                Reset password
-            </div>
-        </a>
+        <div class="menu-item">
+            <a href="">Political parties</a>
+        </div>
+        <div class="menu-item">
+            <a href="">Political offices</a>
+        </div>
+        <div class="menu-item">
+            <a href="">Election results</a>
+        </div>
+        <div class="menu-item">
+            <a href="">Reset password</a>
+        </div>
     </section>
     <section id="user-details">
-        <i class="fas fa-bars fa-2x"></i>
-        <i class="fas fa-times fa-2x"></i>
         <h1>Your Vote History</h1>
         <div id="history">
             <div class="one-history">
@@ -106,6 +95,5 @@
     <footer>
         &copy; Politico 2019
     </footer>
-    <script src="js/profile.js"></script>
 </body>
 </html>
