feat(design/template): add passport field to sign up form
[delivers #163500888]

--- a/UI/sign-up.html
+++ b/UI/sign-up.html
@@ -15,7 +15,7 @@
                 <a href="https://jesse-efe.github.io/Politico/UI/" class="logo">Politico</a>
             </li>
             <li class="nav-item first-nav-item">
-                <button>sign-in</button>
+                <button><a href="https://jesse-efe.github.io/Politico/UI/sign-in.html">login</a></button>
             </li>
         </ul>
     </nav>
@@ -35,6 +35,8 @@
                 <input type="email" id="sign-in-email" class="input"><br>
                 <label for="sign-in-phone">Phone Number</label>
                 <input type="text" id="sign-in-phone" class="input"><br>
+                <label for="passport">Passport</label>
+                <input type="text" id="passport" class="input"><br>
                 <label for="sign-in-pass">Password</label>
                 <input type="password" id="sign-in-pass" class="input"><br>
                 <input type="submit" class="submit-button input" value="Sign up">
