chore(design/server): refactor code to improve maintainability
[finishes #163728128]

--- a/UI/admin-offices.html
+++ b/UI/admin-offices.html
@@ -27,10 +27,10 @@
         </a>
         <a href="https://jesse-efe.github.io/Politico/UI/admin-offices.html">
             <div class="menu-item active">
-                Political offices
+                Register candidates
             </div>
         </a>
-        <a href="https://jesse-efe.github.io/Politico/UI/results.html">
+        <a href="https://jesse-efe.github.io/Politico/UI/admin-results.html">
             <div class="menu-item">
                 Election results
             </div>
@@ -42,12 +42,7 @@
         </a>
         <a href="https://jesse-efe.github.io/Politico/UI/create-office.html">
             <div class="menu-item">
-                Create Ofice
-            </div>
-        </a>
-        <a href="https://jesse-efe.github.io/Politico/UI/reset-password.html">
-            <div class="menu-item">
-                Reset password
+                Create Office
             </div>
         </a>
     </section>
@@ -62,12 +57,12 @@
             </div>
             <div class="candidates">
                 <form>
-                    <input type="radio"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio"> Afe Babalola  [PDP]<br>
-                    <input type="radio"> Okoro Philip Odianfo  [ACCORD]<br>
-                    <input type="radio"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="VOTE" class="vote-button">
+                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
+                    <input type="radio" name="candidate"> Afe Babalola  [PDP]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [ACCORD]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
+                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
+                    <input type="submit" value="Register Candidate" class="vote-button">
                 </form>
             </div>
         </div>
@@ -78,12 +73,12 @@
             </div>
             <div class="candidates">
                 <form>
-                    <input type="radio"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio"> Afe Babalola [PDP]<br>
-                    <input type="radio"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="VOTE" class="vote-button">
+                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
+                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
+                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
+                    <input type="submit" value="Register Candidate" class="vote-button">
                 </form>
             </div>
         </div>
@@ -94,12 +89,12 @@
             </div>
             <div class="candidates">
                 <form>
-                    <input type="radio"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio"> Afe Babalola [PDP]<br>
-                    <input type="radio"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="VOTE" class="vote-button">
+                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
+                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
+                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
+                    <input type="submit" value="Register Candidate" class="vote-button">
                 </form>
             </div>
         </div>
@@ -110,12 +105,12 @@
             </div>
             <div class="candidates">
                 <form>
-                    <input type="radio"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio"> Afe Babalola [PDP]<br>
-                    <input type="radio"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="VOTE" class="vote-button">
+                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
+                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
+                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
+                    <input type="submit" value="Register Candidate" class="vote-button">
                 </form>
             </div>
         </div>
@@ -126,12 +121,12 @@
             </div>
             <div class="candidates">
                 <form>
-                    <input type="radio"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio"> Afe Babalola [PDP]<br>
-                    <input type="radio"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="VOTE" class="vote-button">
+                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
+                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
+                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
+                    <input type="submit" value="Register Candidate" class="vote-button">
                 </form>
             </div>
         </div>
@@ -142,12 +137,12 @@
             </div>
             <div class="candidates">
                 <form>
-                    <input type="radio"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio"> Afe Babalola [PDP]<br>
-                    <input type="radio"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="VOTE" class="vote-button">
+                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
+                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
+                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
+                    <input type="submit" value="Register Candidate" class="vote-button">
                 </form>
             </div>
         </div>
@@ -158,12 +153,12 @@
             </div>
             <div class="candidates">
                 <form>
-                    <input type="radio"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio"> Afe Babalola [PDP]<br>
-                    <input type="radio"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="VOTE" class="vote-button">
+                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
+                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
+                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
+                    <input type="submit" value="Register Candidate" class="vote-button">
                 </form>
             </div>
         </div>
@@ -171,6 +166,7 @@
     <footer>
         &copy; Politico 2019
     </footer>
+    <script src="js/profile.js"></script>
     <script src="js/offices.js"></script>
 </body>
 </html>
