--- a/UI/admin-result.html
+++ b/UI/admin-result.html
@@ -20,24 +20,29 @@
         </ul>
     </nav>
     <section id="side-bar">
-        <a href="https://jesse-efe.github.io/Politico/UI/user-profile.html">
-            <div class="menu-item">
-                My profile
-            </div>
-        </a>
-        <a href="https://jesse-efe.github.io/Politico/UI/parties.html">
+        <a href="https://jesse-efe.github.io/Politico/UI/admin-parties.html">
             <div class="menu-item">
                 Political parties
             </div>
         </a>
-        <a href="https://jesse-efe.github.io/Politico/UI/offices.html">
+        <a href="https://jesse-efe.github.io/Politico/UI/admin-offices.html">
             <div class="menu-item">
-                Political offices
+                Register candidates
             </div>
         </a>
-        <a href="https://jesse-efe.github.io/Politico/UI/results.html">
+        <a href="https://jesse-efe.github.io/Politico/UI/admin-results.html">
             <div class="menu-item active">
                 Election results
+            </div>
+        </a>
+        <a href="https://jesse-efe.github.io/Politico/UI/create-party.html">
+            <div class="menu-item">
+                Create Party
+            </div>
+        </a>
+        <a href="https://jesse-efe.github.io/Politico/UI/create-office.html">
+            <div class="menu-item">
+                Create Ofice
             </div>
         </a>
     </section>
