--- a/UI/edit-party.html
+++ b/UI/edit-party.html
@@ -27,10 +27,10 @@
         </a>
         <a href="https://jesse-efe.github.io/Politico/UI/admin-offices.html">
             <div class="menu-item">
-                Political offices
+                Register candidate
             </div>
         </a>
-        <a href="https://jesse-efe.github.io/Politico/UI/results.html">
+        <a href="https://jesse-efe.github.io/Politico/UI/admin-result.html">
             <div class="menu-item">
                 Election results
             </div>
@@ -43,11 +43,6 @@
         <a href="https://jesse-efe.github.io/Politico/UI/create-office.html">
             <div class="menu-item">
                 Create Ofice
-            </div>
-        </a>
-        <a href="https://jesse-efe.github.io/Politico/UI/reset-password.html">
-            <div class="menu-item">
-                Reset password
             </div>
         </a>
     </section>
@@ -75,6 +70,6 @@
     <footer>
         &copy; Politico 2019
     </footer>
-    <script src="js/create.js"></script>
+    <script src="js/profile.js"></script>
 </body>
 </html>
