--- a/UI/parties.html
+++ b/UI/parties.html
@@ -21,24 +21,24 @@
         </ul>
     </nav>
     <section id="side-bar">
-        <a href="https://jesse-efe.github.io/Politico/UI/parties.html">
+        <a href="https://jesse-efe.github.io/Politico/UI/user-profile.html">
             <div class="menu-item">
+                My profile
+            </div>
+        </a>
+        <a href="https://jesse-efe.github.io/Politico/UI/parties.html">
+            <div class="menu-item active">
                 Political parties
             </div>
         </a>
         <a href="https://jesse-efe.github.io/Politico/UI/offices.html">
-            <div class="menu-item active">
+            <div class="menu-item">
                 Political offices
             </div>
         </a>
         <a href="https://jesse-efe.github.io/Politico/UI/results.html">
             <div class="menu-item">
                 Election results
-            </div>
-        </a>
-        <a href="https://jesse-efe.github.io/Politico/UI/reset-password.html">
-            <div class="menu-item">
-                Reset password
             </div>
         </a>
     </section>
