--- a/UI/politician-offices.html
+++ b/UI/politician-offices.html
@@ -20,6 +20,11 @@
         </ul>
     </nav>
     <section id="side-bar">
+        <a href="https://jesse-efe.github.io/Politico/UI/user-profile.html">
+            <div class="menu-item">
+                My profile
+            </div>
+        </a>
         <a href="https://jesse-efe.github.io/Politico/UI/parties.html">
             <div class="menu-item">
                 Political parties
@@ -33,11 +38,6 @@
         <a href="https://jesse-efe.github.io/Politico/UI/results.html">
             <div class="menu-item">
                 Election results
-            </div>
-        </a>
-        <a href="https://jesse-efe.github.io/Politico/UI/reset-password.html">
-            <div class="menu-item">
-                Reset password
             </div>
         </a>
     </section>
@@ -168,6 +168,7 @@
     <footer>
         &copy; Politico 2019
     </footer>
+    <script src="js/profile.js"></script>
     <script src="js/offices.js"></script>
 </body>
 </html>
