--- a/UI/user-profile.html
+++ b/UI/user-profile.html
@@ -21,6 +21,15 @@
         </ul>
     </nav>
     <section id="side-bar">
+        <div class="user-area">
+            <div class="picture"></div>
+            <span> John Johnson</span>
+        </div>
+        <a href="https://jesse-efe.github.io/Politico/UI/user-profile.html">
+            <div class="menu-item active">
+                My profile
+            </div>
+        </a>
         <a href="https://jesse-efe.github.io/Politico/UI/parties.html">
             <div class="menu-item">
                 Political parties
@@ -34,11 +43,6 @@
         <a href="https://jesse-efe.github.io/Politico/UI/results.html">
             <div class="menu-item">
                 Election results
-            </div>
-        </a>
-        <a href="https://jesse-efe.github.io/Politico/UI/reset-password.html">
-            <div class="menu-item">
-                Reset password
             </div>
         </a>
     </section>
