--- a/UI/admin-parties.html
+++ b/UI/admin-parties.html
@@ -28,10 +28,10 @@
         </a>
         <a href="https://jesse-efe.github.io/Politico/UI/admin-offices.html">
             <div class="menu-item">
-                Political offices
+                Register candidates
             </div>
         </a>
-        <a href="https://jesse-efe.github.io/Politico/UI/results.html">
+        <a href="https://jesse-efe.github.io/Politico/UI/admin-results.html">
             <div class="menu-item">
                 Election results
             </div>
@@ -44,11 +44,6 @@
         <a href="https://jesse-efe.github.io/Politico/UI/create-office.html">
             <div class="menu-item">
                 Create Ofice
-            </div>
-        </a>
-        <a href="https://jesse-efe.github.io/Politico/UI/reset-password.html">
-            <div class="menu-item">
-                Reset password
             </div>
         </a>
     </section>
@@ -149,6 +144,7 @@
     <footer>
         &copy; Politico 2019
     </footer>
+    <script src="js/profile.js"></script>
     <script src="js/profile.js"></script>
 </body>
 </html>
