--- a/UI/offices.html
+++ b/UI/offices.html
@@ -20,6 +20,11 @@
         </ul>
     </nav>
     <section id="side-bar">
+        <a href="https://jesse-efe.github.io/Politico/UI/user-profile.html">
+            <div class="menu-item">
+                My profile
+            </div>
+        </a>
         <a href="https://jesse-efe.github.io/Politico/UI/parties.html">
             <div class="menu-item">
                 Political parties
@@ -35,11 +40,6 @@
                 Election results
             </div>
         </a>
-        <a href="https://jesse-efe.github.io/Politico/UI/reset-password.html">
-            <div class="menu-item">
-                Reset password
-            </div>
-        </a>
     </section>
     <section id="offices">
         <i class="fas fa-bars fa-2x"></i>
@@ -52,11 +52,11 @@
             </div>
             <div class="candidates">
                 <form>
-                    <input type="radio"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio"> Afe Babalola  [PDP]<br>
-                    <input type="radio"> Okoro Philip Odianfo  [ACCORD]<br>
-                    <input type="radio"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio"> Peter Festus Jnr.  [APGA]<br>  
+                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
+                    <input type="radio" name="candidate"> Afe Babalola  [PDP]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [ACCORD]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
+                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
                     <input type="submit" value="VOTE" class="vote-button">
                 </form>
             </div>
@@ -68,11 +68,11 @@
             </div>
             <div class="candidates">
                 <form>
-                    <input type="radio"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio"> Afe Babalola [PDP]<br>
-                    <input type="radio"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio"> Peter Festus Jnr.  [APGA]<br>  
+                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
+                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
+                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
                     <input type="submit" value="VOTE" class="vote-button">
                 </form>
             </div>
@@ -84,11 +84,11 @@
             </div>
             <div class="candidates">
                 <form>
-                    <input type="radio"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio"> Afe Babalola [PDP]<br>
-                    <input type="radio"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio"> Peter Festus Jnr.  [APGA]<br>  
+                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
+                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
+                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
                     <input type="submit" value="VOTE" class="vote-button">
                 </form>
             </div>
@@ -100,11 +100,11 @@
             </div>
             <div class="candidates">
                 <form>
-                    <input type="radio"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio"> Afe Babalola [PDP]<br>
-                    <input type="radio"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio"> Peter Festus Jnr.  [APGA]<br>  
+                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
+                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
+                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
                     <input type="submit" value="VOTE" class="vote-button">
                 </form>
             </div>
@@ -116,11 +116,11 @@
             </div>
             <div class="candidates">
                 <form>
-                    <input type="radio"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio"> Afe Babalola [PDP]<br>
-                    <input type="radio"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio"> Peter Festus Jnr.  [APGA]<br>  
+                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
+                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
+                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
                     <input type="submit" value="VOTE" class="vote-button">
                 </form>
             </div>
@@ -132,11 +132,11 @@
             </div>
             <div class="candidates">
                 <form>
-                    <input type="radio"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio"> Afe Babalola [PDP]<br>
-                    <input type="radio"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio"> Peter Festus Jnr.  [APGA]<br>  
+                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
+                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
+                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
                     <input type="submit" value="VOTE" class="vote-button">
                 </form>
             </div>
@@ -148,11 +148,11 @@
             </div>
             <div class="candidates">
                 <form>
-                    <input type="radio"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio"> Afe Babalola [PDP]<br>
-                    <input type="radio"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio"> Peter Festus Jnr.  [APGA]<br>  
+                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
+                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
+                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
+                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
                     <input type="submit" value="VOTE" class="vote-button">
                 </form>
             </div>
@@ -162,5 +162,6 @@
         &copy; Politico 2019
     </footer>
     <script src="js/offices.js"></script>
+    <script src="js/profile.js"></script>
 </body>
 </html>
