--- a/UI/sign-up.html
+++ b/UI/sign-up.html
@@ -24,6 +24,7 @@
        <div class="box">
         <div class="form">
             <h2></h2>
+            <div class="sign-up-result"></div>
             <form id="sign-in-form">
                 <label for="sign-in-first-name">First name</label>
                 <input type="text" id="sign-in-first-name" class="input"><br>
@@ -35,13 +36,14 @@
                 <input type="email" id="sign-in-email" class="input"><br>
                 <label for="sign-in-phone">Phone Number</label>
                 <input type="text" id="sign-in-phone" class="input"><br>
-                <label for="passport">Passport</label>
+                <label for="passport">Passport URL</label>
                 <input type="text" id="passport" class="input"><br>
                 <label for="sign-in-pass">Password</label>
                 <input type="password" id="sign-in-pass" class="input"><br>
+                <span class="loading"><img src="loading.gif"></span>
                 <input type="submit" class="submit-button input" value="Sign up">
             </form>
-            <h6 id="alt-sign-up">Already have an account? <a href="">Sign in</a></h6> 
+            <h6 id="alt-sign-up">Already have an account? <a href="https://jesse-efe.github.io/Politico/UI/sign-in.html">Sign in</a></h6> 
         </div>
        </div>
     </section>
@@ -49,5 +51,7 @@
     <footer>
         &copy; Politico 2019
     </footer>
+
+    <script src="../jsScript/signup.js"></script>
 </body>
 </html>
