feat(Front-end): make calls to server with fetch API
- post sign up and sign in data to server
- store token on success in local storage

[delivers #163723301]

--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -24,11 +24,13 @@
        <div class="box">
         <div class="form">
             <h2></h2>
+            <div class="result-div"></div>
             <form id="sign-in-form">
                 <label for="sign-in-email">Email</label>
                 <input type="email" id="sign-in-email" class="input"><br>
                 <label for="sign-in-pass">Password</label>
                 <input type="password" id="sign-in-pass" class="input"><br>
+                <span class="loading"><img src="loading.gif"></span>
                 <input type="submit" class="submit-button input" value="Sign in">
             </form>
             <span>
@@ -44,5 +46,6 @@
     <footer>
         &copy; Politico 2019
     </footer>
+    <script src="../jsScript/signIn.js"></script>
 </body>
 </html>
