--- a/UI/sign-up.html
+++ b/UI/sign-up.html
@@ -24,7 +24,7 @@
        <div class="box">
         <div class="form">
             <h2></h2>
-            <div class="sign-up-result"></div>
+            <div class="result-div"></div>
             <form id="sign-in-form">
                 <label for="sign-in-first-name">First name</label>
                 <input type="text" id="sign-in-first-name" class="input"><br>
