--- a/UI/create-party.html
+++ b/UI/create-party.html
@@ -54,13 +54,15 @@
             <div class="box">
                 <div class="form">
                     <h2></h2>
+                    <div class="result-div"></div>
                     <form id="sign-in-form">
                         <label for="party-name">Party Name</label>
                         <input type="text" id="party-name" class="input"><br>
                         <label for="party-address">Head Quater Address</label>
                         <input type="text" id="party-address" class="input"><br>
-                        <label for="party-logo">Party LOgo</label>
+                        <label for="party-logo">Logo URL</label>
                         <input type="text" id="party-logo" class="input"><br>
+                        <span class="loading"><img src="loading.gif"></span>
                         <input type="submit" class="submit-button input" value="Create Party">
                     </form>
                 </div>
@@ -71,5 +73,6 @@
         &copy; Politico 2019
     </footer>
     <script src="js/profile.js"></script>
+    <script src="../jsScript/createParty.js"></script>
 </body>
 </html>
