--- a/UI/edit-party.html
+++ b/UI/edit-party.html
@@ -54,15 +54,7 @@
             <div class="box">
                 <div class="form">
                     <h2></h2>
-                    <form id="sign-in-form">
-                        <label for="party-name">New Party Name</label>
-                        <input type="text" id="party-name" class="input"><br>
-                        <label for="party-address"> New Head Quater Address</label>
-                        <input type="text" id="party-address" class="input"><br>
-                        <label for="party-logo">New Party Logo</label>
-                        <input type="text" id="party-logo" class="input"><br>
-                        <input type="submit" class="submit-button input" value="Edit Party">
-                    </form>
+                    <div class="result-div"></div>
                 </div>
             </div>
         </section>
@@ -71,5 +63,6 @@
         &copy; Politico 2019
     </footer>
     <script src="js/profile.js"></script>
+    <script src="../jsScript/editParty.js"></script>
 </body>
 </html>
