--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -38,7 +38,7 @@
                 <div class="divider-text">New to Politico?</div>
                 <div class="divider"></div>
             </span>
-            <input type="button" class="alt-button input" value="Create Your Politico account">
+            <a href="https://jesse-efe.github.io/Politico/UI/sign-up.html"><input type="button" class="alt-button input" value="Create Your Politico account"></a>
         </div>
        </div>
     </section>
